--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require" : {
         "php": "5.6.3",
-        "phalcon" : "dev-master",
+        "phalcon" : "master",
         "ext-redis" : "*"
     }
 }
