--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require" : {
-        "php": ">=5.3.9",
-        "phalcon/devtools": "dev-master"
+        "php": ">=5.6.9",
+        "phalcon/cphalcon": "dev-master"
     }
 }
